syntax = "proto3";
option go_package = "github.com/lileio/account_service";
import "google/protobuf/empty.proto";
import "image_service.proto";

package account_service;

message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  map<string, image_service.Image> images = 4;
}

message ListAccountsRequest {
  int32 page_size = 1;
  string page_token = 2;
}

message ListAccountsResponse {
  repeated Account accounts = 1;
  string next_page_token = 2;
}

message GetByIdRequest {
  string id = 1;
}

message GetByEmailRequest {
  string email = 1;
}

message AuthenticateByEmailRequest {
  string email = 1;
  string password = 2;
}

message CreateAccountRequest {
  Account account = 1;
  string password = 2;
  image_service.ImageStoreRequest image = 3;
}

message UpdateAccountRequest {
  string id = 1;
  string password = 2;
  image_service.ImageStoreRequest image = 3;
  Account account = 4;
}

message DeleteAccountRequest {
  string id = 1;
}

service AccountService {
  rpc List (ListAccountsRequest) returns (ListAccountsResponse) {}
  rpc GetById (GetByIdRequest) returns (Account) {}
  rpc GetByEmail (GetByEmailRequest) returns (Account) {}
  rpc AuthenticateByEmail (AuthenticateByEmailRequest) returns (Account) {}
  rpc Create (CreateAccountRequest) returns (Account) {}
  rpc Update (UpdateAccountRequest) returns (Account) {}
  rpc Delete (DeleteAccountRequest) returns (google.protobuf.Empty) {}
}
